--- a/index.qmd
+++ b/index.qmd
@@ -358,7 +358,7 @@ when you first learn about them" concepts I have ever encountered.
 <br>
 
 -   I just don't know which type of universe this is...
--   ... and I'l never know.
+-   ... and I'll never know.
 :::
 
 ::: footer
